Добавлено поле военной полиции

--- a/app/config/data_structure.yaml
+++ b/app/config/data_structure.yaml
@@ -64,3 +64,11 @@ fields:
   pUnits:
     type: "fixed"
     name: "Отряд"
+
+  pAdmin:
+    name: "Админ"
+    items:
+      - name: ""
+      - name: "Военная полиция"
+      - name: ""
+      - name: ""
