--- a/app/config/data_structure.yaml
+++ b/app/config/data_structure.yaml
@@ -44,6 +44,7 @@ fields:
       - name: "Снайпер"
       - name: "Медик"
       - name: "Голубой Берет"
+      - name: "ССО"
 
   pExp:
     name: "Опыт"
