Добавлен допуск Легионера (закомменченный)

--- a/app/config/data_structure.yaml
+++ b/app/config/data_structure.yaml
@@ -23,6 +23,7 @@ fields:
       - name: "Стрингеры"
       - name: "Красный крест"
       - name: "НАТО"
+      # - name: "Легионер"
 
   pKMB:
     name: "Инструкторский состав"
