Добавлено ограничение на 6 знаков для отряда

--- a/app/config/data_structure.yaml
+++ b/app/config/data_structure.yaml
@@ -19,10 +19,11 @@ fields:
     name: "РП стороны"
     items:
       - name: "Зевс"
-      - name: "Легионер"
+      - name: "Легионер (повстанец)"
       - name: "Стрингеры"
       - name: "Красный крест"
       - name: "НАТО"
+      - name: "Легионер"
 
   pKMB:
     name: "Инструкторский состав"
